test/fails/bad_types/vec_mult3.lgl
vec2 v = [2., 3.];
print v * v;